// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BTCAmount should render correctly for extra large size 1`] = `
<View
  style={
    [
      undefined,
      {
        "justifyContent": "center",
      },
      false,
      false,
      false,
      false,
      {
        "height": 18,
        "width": 242,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "flex-end",
          "marginBottom": -40,
          "marginTop": -40,
        },
        {
          "gap": 2,
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
          },
          false,
          false,
          false,
          false,
          {
            "height": 32,
            "width": 32,
          },
        ]
      }
    >
      <Icon
        id="bitcoinLogo"
        style={
          [
            false,
            false,
            false,
            false,
            {
              "height": 24,
              "width": 24,
            },
          ]
        }
      />
    </View>
    <View
      style={
        [
          {
            "alignItems": "baseline",
            "flexDirection": "row",
          },
          false,
          false,
          {
            "gap": 4,
            "paddingTop": 4,
          },
        ]
      }
    >
      <MixedLetterSpacingText
        isError={false}
        style={
          [
            {
              "alignItems": "center",
              "fontFamily": "CourierPrime-Bold",
              "textAlign": "center",
            },
            false,
            false,
            false,
            false,
            {
              "fontSize": 30,
              "lineHeight": 40,
            },
          ]
        }
        value={21000}
      />
      <PeachText
        style={
          [
            {
              "alignItems": "center",
              "fontFamily": "Baloo2-Medium",
            },
            false,
            false,
            false,
            false,
            false,
            {
              "fontSize": 20,
              "lineHeight": 30,
              "paddingBottom": 4,
            },
          ]
        }
      >
        sats
      </PeachText>
    </View>
  </View>
</View>
`;

exports[`BTCAmount should render correctly for extra small size 1`] = `
<View
  style={
    [
      undefined,
      {
        "justifyContent": "center",
      },
      {
        "height": 9,
        "width": 120,
      },
      false,
      false,
      false,
      false,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "flex-end",
          "marginBottom": -40,
          "marginTop": -40,
        },
        false,
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
          },
          {
            "height": 14,
            "width": 14,
          },
          false,
          false,
          false,
          false,
        ]
      }
    >
      <Icon
        id="bitcoinLogo"
        style={
          [
            {
              "height": 10.5,
              "width": 10.5,
            },
            false,
            false,
            false,
            false,
          ]
        }
      />
    </View>
    <View
      style={
        [
          {
            "alignItems": "baseline",
            "flexDirection": "row",
          },
          {
            "gap": 2,
            "paddingTop": 3,
          },
          false,
          false,
        ]
      }
    >
      <MixedLetterSpacingText
        isError={false}
        style={
          [
            {
              "alignItems": "center",
              "fontFamily": "CourierPrime-Bold",
              "textAlign": "center",
            },
            {
              "fontSize": 15,
              "lineHeight": 20,
            },
            false,
            false,
            false,
            false,
          ]
        }
        value={21000}
      />
      <PeachText
        style={
          [
            {
              "alignItems": "center",
              "fontFamily": "Baloo2-Medium",
            },
            false,
            {
              "fontSize": 10,
              "lineHeight": 15,
              "paddingBottom": 2,
            },
            false,
            false,
            false,
            false,
          ]
        }
      >
        sats
      </PeachText>
    </View>
  </View>
</View>
`;

exports[`BTCAmount should render correctly for large size 1`] = `
<View
  style={
    [
      undefined,
      {
        "justifyContent": "center",
      },
      false,
      false,
      false,
      {
        "height": 16,
        "width": 211,
      },
      false,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "flex-end",
          "marginBottom": -40,
          "marginTop": -40,
        },
        {
          "gap": 2,
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
          },
          false,
          false,
          false,
          {
            "height": 26,
            "width": 26,
          },
          false,
        ]
      }
    >
      <Icon
        id="bitcoinLogo"
        style={
          [
            false,
            false,
            false,
            {
              "height": 19.5,
              "width": 19.5,
            },
            false,
          ]
        }
      />
    </View>
    <View
      style={
        [
          {
            "alignItems": "baseline",
            "flexDirection": "row",
          },
          false,
          false,
          {
            "gap": 4,
            "paddingTop": 4,
          },
        ]
      }
    >
      <MixedLetterSpacingText
        isError={false}
        style={
          [
            {
              "alignItems": "center",
              "fontFamily": "CourierPrime-Bold",
              "textAlign": "center",
            },
            false,
            false,
            false,
            {
              "fontSize": 26,
              "lineHeight": 35,
            },
            false,
          ]
        }
        value={21000}
      />
      <PeachText
        style={
          [
            {
              "alignItems": "center",
              "fontFamily": "Baloo2-Medium",
            },
            false,
            false,
            false,
            false,
            {
              "fontSize": 18,
              "lineHeight": 27,
              "paddingBottom": 3,
            },
            false,
          ]
        }
      >
        sats
      </PeachText>
    </View>
  </View>
</View>
`;

exports[`BTCAmount should render correctly for medium size 1`] = `
<View
  style={
    [
      undefined,
      {
        "justifyContent": "center",
      },
      false,
      false,
      {
        "height": 13,
        "width": 179,
      },
      false,
      false,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "flex-end",
          "marginBottom": -40,
          "marginTop": -40,
        },
        {
          "gap": 2,
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
          },
          false,
          false,
          {
            "height": 20,
            "width": 20,
          },
          false,
          false,
        ]
      }
    >
      <Icon
        id="bitcoinLogo"
        style={
          [
            false,
            false,
            {
              "height": 15,
              "width": 15,
            },
            false,
            false,
          ]
        }
      />
    </View>
    <View
      style={
        [
          {
            "alignItems": "baseline",
            "flexDirection": "row",
          },
          false,
          {
            "gap": 3,
            "paddingTop": 4,
          },
          false,
        ]
      }
    >
      <MixedLetterSpacingText
        isError={false}
        style={
          [
            {
              "alignItems": "center",
              "fontFamily": "CourierPrime-Bold",
              "textAlign": "center",
            },
            false,
            false,
            {
              "fontSize": 22,
              "lineHeight": 29,
            },
            false,
            false,
          ]
        }
        value={21000}
      />
      <PeachText
        style={
          [
            {
              "alignItems": "center",
              "fontFamily": "Baloo2-Medium",
            },
            false,
            false,
            false,
            {
              "fontSize": 16,
              "lineHeight": 24,
              "paddingBottom": 2,
            },
            false,
            false,
          ]
        }
      >
        sats
      </PeachText>
    </View>
  </View>
</View>
`;

exports[`BTCAmount should render correctly for small size 1`] = `
<View
  style={
    [
      undefined,
      {
        "justifyContent": "center",
      },
      false,
      {
        "height": 10,
        "width": 135,
      },
      false,
      false,
      false,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "flex-end",
          "marginBottom": -40,
          "marginTop": -40,
        },
        false,
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
          },
          false,
          {
            "height": 16,
            "width": 16,
          },
          false,
          false,
          false,
        ]
      }
    >
      <Icon
        id="bitcoinLogo"
        style={
          [
            false,
            {
              "height": 12,
              "width": 12,
            },
            false,
            false,
            false,
          ]
        }
      />
    </View>
    <View
      style={
        [
          {
            "alignItems": "baseline",
            "flexDirection": "row",
          },
          {
            "gap": 2,
            "paddingTop": 3,
          },
          false,
          false,
        ]
      }
    >
      <MixedLetterSpacingText
        isError={false}
        style={
          [
            {
              "alignItems": "center",
              "fontFamily": "CourierPrime-Bold",
              "textAlign": "center",
            },
            false,
            {
              "fontSize": 17,
              "lineHeight": 23,
            },
            false,
            false,
            false,
          ]
        }
        value={21000}
      />
      <PeachText
        style={
          [
            {
              "alignItems": "center",
              "fontFamily": "Baloo2-Medium",
            },
            false,
            false,
            {
              "fontSize": 12,
              "lineHeight": 18,
              "paddingBottom": 2,
            },
            false,
            false,
            false,
          ]
        }
      >
        sats
      </PeachText>
    </View>
  </View>
</View>
`;

exports[`BTCAmount should render correctly when the value is 0 1`] = `
<View
  style={
    [
      undefined,
      {
        "justifyContent": "center",
      },
      false,
      false,
      false,
      false,
      {
        "height": 18,
        "width": 242,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "flex-end",
          "marginBottom": -40,
          "marginTop": -40,
        },
        {
          "gap": 2,
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
          },
          false,
          false,
          false,
          false,
          {
            "height": 32,
            "width": 32,
          },
        ]
      }
    >
      <Icon
        id="bitcoinLogo"
        style={
          [
            false,
            false,
            false,
            false,
            {
              "height": 24,
              "width": 24,
            },
          ]
        }
      />
    </View>
    <View
      style={
        [
          {
            "alignItems": "baseline",
            "flexDirection": "row",
          },
          false,
          false,
          {
            "gap": 4,
            "paddingTop": 4,
          },
        ]
      }
    >
      <MixedLetterSpacingText
        isError={false}
        style={
          [
            {
              "alignItems": "center",
              "fontFamily": "CourierPrime-Bold",
              "textAlign": "center",
            },
            false,
            false,
            false,
            false,
            {
              "fontSize": 30,
              "lineHeight": 40,
            },
          ]
        }
        value={0}
      />
      <PeachText
        style={
          [
            {
              "alignItems": "center",
              "fontFamily": "Baloo2-Medium",
            },
            false,
            false,
            false,
            false,
            false,
            {
              "fontSize": 20,
              "lineHeight": 30,
              "paddingBottom": 4,
            },
          ]
        }
      >
        sats
      </PeachText>
    </View>
  </View>
</View>
`;

exports[`BTCAmount should render correctly with isError 1`] = `
<View
  style={
    [
      undefined,
      {
        "justifyContent": "center",
      },
      false,
      false,
      false,
      false,
      {
        "height": 18,
        "width": 242,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "flex-end",
          "marginBottom": -40,
          "marginTop": -40,
        },
        {
          "gap": 2,
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
          },
          false,
          false,
          false,
          false,
          {
            "height": 32,
            "width": 32,
          },
        ]
      }
    >
      <Icon
        id="bitcoinLogo"
        style={
          [
            false,
            false,
            false,
            false,
            {
              "height": 24,
              "width": 24,
            },
          ]
        }
      />
    </View>
    <View
      style={
        [
          {
            "alignItems": "baseline",
            "flexDirection": "row",
          },
          false,
          false,
          {
            "gap": 4,
            "paddingTop": 4,
          },
        ]
      }
    >
      <MixedLetterSpacingText
        isError={true}
        style={
          [
            {
              "alignItems": "center",
              "fontFamily": "CourierPrime-Bold",
              "textAlign": "center",
            },
            false,
            false,
            false,
            false,
            {
              "fontSize": 30,
              "lineHeight": 40,
            },
          ]
        }
        value={21000}
      />
      <PeachText
        style={
          [
            {
              "alignItems": "center",
              "fontFamily": "Baloo2-Medium",
            },
            {
              "color": "#B01807",
            },
            false,
            false,
            false,
            false,
            {
              "fontSize": 20,
              "lineHeight": 30,
              "paddingBottom": 4,
            },
          ]
        }
      >
        sats
      </PeachText>
    </View>
  </View>
</View>
`;

exports[`MixedLetterSpacingText should render correctly 1`] = `
<PeachText
  style={
    [
      {
        "fontSize": 16,
      },
    ]
  }
>
  <PeachText
    style={
      [
        [
          {
            "fontSize": 16,
          },
        ],
        {
          "color": "#EAE3DF",
        },
        {
          "letterSpacing": -1.2,
        },
      ]
    }
  >
    0
  </PeachText>
  <PeachText
    style={
      [
        [
          {
            "fontSize": 16,
          },
        ],
        {
          "color": "#EAE3DF",
        },
        {
          "letterSpacing": -3.36,
        },
      ]
    }
  >
    .
  </PeachText>
  <PeachText
    style={
      [
        [
          {
            "fontSize": 16,
          },
        ],
        {
          "color": "#EAE3DF",
        },
        {
          "letterSpacing": -1.2,
        },
      ]
    }
  >
    0
  </PeachText>
  <PeachText
    style={
      [
        [
          {
            "fontSize": 16,
          },
        ],
        {
          "color": "#EAE3DF",
        },
        {
          "letterSpacing": -1.2,
        },
      ]
    }
  >
    0
  </PeachText>
  <PeachText
    style={
      [
        [
          {
            "fontSize": 16,
          },
        ],
        {
          "letterSpacing": -5.6,
        },
      ]
    }
  >
     
  </PeachText>
  <PeachText
    style={
      [
        [
          {
            "fontSize": 16,
          },
        ],
        {
          "color": "#EAE3DF",
        },
        {
          "letterSpacing": -1.2,
        },
      ]
    }
  >
    0
  </PeachText>
  <PeachText
    style={
      [
        [
          {
            "fontSize": 16,
          },
        ],
        false,
        {
          "letterSpacing": -1.2,
        },
      ]
    }
  >
    2
  </PeachText>
  <PeachText
    style={
      [
        [
          {
            "fontSize": 16,
          },
        ],
        false,
        {
          "letterSpacing": -1.2,
        },
      ]
    }
  >
    1
  </PeachText>
  <PeachText
    style={
      [
        [
          {
            "fontSize": 16,
          },
        ],
        {
          "letterSpacing": -5.6,
        },
      ]
    }
  >
     
  </PeachText>
  <PeachText
    style={
      [
        [
          {
            "fontSize": 16,
          },
        ],
        false,
        {
          "letterSpacing": -1.2,
        },
      ]
    }
  >
    0
  </PeachText>
  <PeachText
    style={
      [
        [
          {
            "fontSize": 16,
          },
        ],
        false,
        {
          "letterSpacing": -1.2,
        },
      ]
    }
  >
    0
  </PeachText>
  <PeachText
    style={
      [
        [
          {
            "fontSize": 16,
          },
        ],
        false,
        {
          "letterSpacing": -1.2,
        },
      ]
    }
  >
    0
  </PeachText>
</PeachText>
`;

exports[`MixedLetterSpacingText should render correctly with isError 1`] = `
<PeachText
  style={
    [
      {
        "fontSize": 16,
      },
    ]
  }
>
  <PeachText
    style={
      [
        [
          {
            "fontSize": 16,
          },
        ],
        {
          "color": "#FFD1CA",
        },
        {
          "letterSpacing": -1.2,
        },
      ]
    }
  >
    0
  </PeachText>
  <PeachText
    style={
      [
        [
          {
            "fontSize": 16,
          },
        ],
        {
          "color": "#FFD1CA",
        },
        {
          "letterSpacing": -3.36,
        },
      ]
    }
  >
    .
  </PeachText>
  <PeachText
    style={
      [
        [
          {
            "fontSize": 16,
          },
        ],
        {
          "color": "#FFD1CA",
        },
        {
          "letterSpacing": -1.2,
        },
      ]
    }
  >
    0
  </PeachText>
  <PeachText
    style={
      [
        [
          {
            "fontSize": 16,
          },
        ],
        {
          "color": "#FFD1CA",
        },
        {
          "letterSpacing": -1.2,
        },
      ]
    }
  >
    0
  </PeachText>
  <PeachText
    style={
      [
        [
          {
            "fontSize": 16,
          },
        ],
        {
          "letterSpacing": -5.6,
        },
      ]
    }
  >
     
  </PeachText>
  <PeachText
    style={
      [
        [
          {
            "fontSize": 16,
          },
        ],
        {
          "color": "#FFD1CA",
        },
        {
          "letterSpacing": -1.2,
        },
      ]
    }
  >
    0
  </PeachText>
  <PeachText
    style={
      [
        [
          {
            "fontSize": 16,
          },
        ],
        {
          "color": "#B01807",
        },
        {
          "letterSpacing": -1.2,
        },
      ]
    }
  >
    2
  </PeachText>
  <PeachText
    style={
      [
        [
          {
            "fontSize": 16,
          },
        ],
        {
          "color": "#B01807",
        },
        {
          "letterSpacing": -1.2,
        },
      ]
    }
  >
    1
  </PeachText>
  <PeachText
    style={
      [
        [
          {
            "fontSize": 16,
          },
        ],
        {
          "letterSpacing": -5.6,
        },
      ]
    }
  >
     
  </PeachText>
  <PeachText
    style={
      [
        [
          {
            "fontSize": 16,
          },
        ],
        {
          "color": "#B01807",
        },
        {
          "letterSpacing": -1.2,
        },
      ]
    }
  >
    0
  </PeachText>
  <PeachText
    style={
      [
        [
          {
            "fontSize": 16,
          },
        ],
        {
          "color": "#B01807",
        },
        {
          "letterSpacing": -1.2,
        },
      ]
    }
  >
    0
  </PeachText>
  <PeachText
    style={
      [
        [
          {
            "fontSize": 16,
          },
        ],
        {
          "color": "#B01807",
        },
        {
          "letterSpacing": -1.2,
        },
      ]
    }
  >
    0
  </PeachText>
</PeachText>
`;
